--- a/1_data_manipulations/Pandas_data_manipulations.ipynb
+++ b/1_data_manipulations/Pandas_data_manipulations.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,11 +282,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(187, 208)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "boys, girls = # your code here"
+    "boys, girls = len(mat[(mat['sex'] == 'M')]), len(mat[(mat['sex'] == 'F')])\n",
+    "boys, girls"
    ]
   },
   {
@@ -298,11 +310,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "108"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "students_17_year_old = # your code here"
+    "students_17_year_old = len(mat[(mat['sex'] == 'M') & (mat['G3'] >= 10) & (mat['G3'] <= 15)])\n",
+    "students_17_year_old"
    ]
   },
   {
@@ -314,11 +338,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "boys_from_top_10 = # your code here"
+    "top_10 = mat.sort_values(by=['G1','G2','G3'], ascending=(False, False, False))[:11]\n",
+    "boys_from_top_10 = len(top_10[top_10['sex'] == 'M'])\n",
+    "boys_from_top_10"
    ]
   },
   {
@@ -330,11 +367,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(8.155172413793103, 11.25329203873895)"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "mean, std = # your code here"
+    "romantic_and_internet = mat[(mat['internet'] == 'yes') & (mat['romantic'] == 'yes')]\n",
+    "mean, std = romantic_and_internet['absences'].mean(), romantic_and_internet['absences'].std()\n",
+    "mean, std"
    ]
   },
   {
@@ -357,7 +407,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "student_counts_for_each_age = # your code here"
+    "student_counts_for_each_age = mat."
    ]
   },
   {
@@ -547,7 +597,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -561,7 +611,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
