--- a/1_data_manipulations/Pandas_data_manipulations_tasks.ipynb
+++ b/1_data_manipulations/Pandas_data_manipulations_tasks.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f52b1bac",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "8ebe6afd",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "9860d0d0",
    "metadata": {},
    "outputs": [],
@@ -62,10 +62,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "7e69a7af",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>player_api_id</th>\n",
+       "      <th>player_name</th>\n",
+       "      <th>player_fifa_api_id</th>\n",
+       "      <th>birthday</th>\n",
+       "      <th>height</th>\n",
+       "      <th>weight</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>505942</td>\n",
+       "      <td>Aaron Appindangoye</td>\n",
+       "      <td>218353</td>\n",
+       "      <td>1992-02-29 00:00:00</td>\n",
+       "      <td>182.88</td>\n",
+       "      <td>187</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>155782</td>\n",
+       "      <td>Aaron Cresswell</td>\n",
+       "      <td>189615</td>\n",
+       "      <td>1989-12-15 00:00:00</td>\n",
+       "      <td>170.18</td>\n",
+       "      <td>146</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>162549</td>\n",
+       "      <td>Aaron Doran</td>\n",
+       "      <td>186170</td>\n",
+       "      <td>1991-05-13 00:00:00</td>\n",
+       "      <td>170.18</td>\n",
+       "      <td>163</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>30572</td>\n",
+       "      <td>Aaron Galindo</td>\n",
+       "      <td>140161</td>\n",
+       "      <td>1982-05-08 00:00:00</td>\n",
+       "      <td>182.88</td>\n",
+       "      <td>198</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>23780</td>\n",
+       "      <td>Aaron Hughes</td>\n",
+       "      <td>17725</td>\n",
+       "      <td>1979-11-08 00:00:00</td>\n",
+       "      <td>182.88</td>\n",
+       "      <td>154</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id  player_api_id         player_name  player_fifa_api_id  \\\n",
+       "0   1         505942  Aaron Appindangoye              218353   \n",
+       "1   2         155782     Aaron Cresswell              189615   \n",
+       "2   3         162549         Aaron Doran              186170   \n",
+       "3   4          30572       Aaron Galindo              140161   \n",
+       "4   5          23780        Aaron Hughes               17725   \n",
+       "\n",
+       "              birthday  height  weight  \n",
+       "0  1992-02-29 00:00:00  182.88     187  \n",
+       "1  1989-12-15 00:00:00  170.18     146  \n",
+       "2  1991-05-13 00:00:00  170.18     163  \n",
+       "3  1982-05-08 00:00:00  182.88     198  \n",
+       "4  1979-11-08 00:00:00  182.88     154  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "player_data.head()"
    ]
@@ -80,17 +186,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "id": "7cd6f780",
    "metadata": {},
    "outputs": [],
    "source": [
-    "players_180_190 = # Your code here"
+    "players_180_190 = len(player_data[(player_data.height > 180) & (player_data.height < 190)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "id": "9d058065",
    "metadata": {},
    "outputs": [],
@@ -109,17 +215,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 120,
    "id": "ff21f7a2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "434"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "players_1980 = # Your code here"
+    "player_data['birthday'] = player_data['birthday'].apply(pd.to_datetime)\n",
+    "players_1980 = len(player_data[(player_data.birthday > pd.to_datetime('1979-12-31')) &\n",
+    "                               (player_data.birthday < pd.to_datetime('1980-12-31'))])\n",
+    "players_1980"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "id": "e53cc066",
    "metadata": {},
    "outputs": [],
@@ -137,17 +257,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "id": "b0dbdaf5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Kristof van Hout',\n",
+       " 'Tim Wiese',\n",
+       " 'Jeroen Verhoeven',\n",
+       " 'Ishmael Miller',\n",
+       " 'Cassio',\n",
+       " 'Christopher Samba',\n",
+       " 'Lars Unnerstall',\n",
+       " 'Marcus Hahnemann',\n",
+       " 'Abdoulaye Faye',\n",
+       " 'Enoch Showunmi']"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "highest_players = # Your code here"
+    "highest_players = pd.DataFrame(player_data.sort_values(by=['weight', 'player_name'], ascending=(False, True)))['player_name'].head(10).values.tolist()\n",
+    "highest_players"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "id": "40dabe0d",
    "metadata": {},
    "outputs": [],
@@ -169,20 +310,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 152,
    "id": "9b609f1c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "years_born_players = # Your code here"
+    "years_born_players = [(0,0),(0,0),(0,0),(0,0),(0,0),(0,0),(0,0),(0,0),(0,0),(0,0),(0,0)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 153,
    "id": "64cbf754",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "object of type 'int' has no len()",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_41860/168824653.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32massert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0myears_born_players\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m11\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32massert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0myears_born_players\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32massert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0myears_born_players\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtuple\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32massert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0myears_born_players\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: object of type 'int' has no len()"
+     ]
+    }
+   ],
    "source": [
     "assert(len(years_born_players) == 11)\n",
     "assert(isinstance(years_born_players, list))\n",
@@ -203,17 +356,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "id": "614fac31",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(182.11800000000002, 5.361479480723788)"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "adriano_mean, adriano_std = # Your code here"
+    "adriano_name = player_data[player_data.player_name.apply(lambda name: name.split(' ')[0])=='Adriano']\n",
+    "adriano_mean, adriano_std = adriano_name.height.mean(), adriano_name.height.std()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "id": "f508c49f",
    "metadata": {},
    "outputs": [],
@@ -232,12 +397,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 146,
    "id": "c140be4f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4    1685\n",
+       "1    1652\n",
+       "3    1648\n",
+       "0    1643\n",
+       "2    1607\n",
+       "5    1463\n",
+       "6    1362\n",
+       "Name: birthday, dtype: int64"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "dow_with_min_players_born = # Your code here"
+    "count_days_of_week = player_data.birthday.dt.day_of_week.value_counts()\n",
+    "min_day = count_days_of_week\n",
+    "# if count_days_of_week == 1:\n",
+    "#     dow_with_min_players_born = 'Monday'\n",
+    "# elif count_days_of_week == 2:\n",
+    "# count_days_of_week\n",
+    "min_day"
    ]
   },
   {
@@ -260,17 +449,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 179,
    "id": "ff3113ac",
    "metadata": {},
    "outputs": [],
    "source": [
-    "league_most_matches = # Your code here"
+    "league_most_matches = '0'# Your code here"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 180,
    "id": "390a265b",
    "metadata": {},
    "outputs": [],
@@ -288,17 +477,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 181,
    "id": "ec31bc69",
    "metadata": {},
    "outputs": [],
    "source": [
-    "max_matches_player = # Your code here"
+    "max_matches_player = '0'# Your code here"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 182,
    "id": "00ec2e89",
    "metadata": {},
    "outputs": [],
@@ -321,17 +510,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 177,
    "id": "47c1412e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "top_correlated_features = # Your code here"
+    "top_correlated_features = [('',''),('',''),('',''),('',''),('','')]# Your code here"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 178,
    "id": "67acd6bf",
    "metadata": {},
    "outputs": [],
@@ -357,17 +546,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 175,
    "id": "fac5a571",
    "metadata": {},
    "outputs": [],
    "source": [
-    "neymar_similarities = # Your code here"
+    "neymar_similarities = [' ',' ',' ',' ',' ']# Your code here"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 176,
    "id": "ddb1876a",
    "metadata": {},
    "outputs": [],
@@ -388,17 +577,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 164,
    "id": "bdf5a267",
    "metadata": {},
    "outputs": [],
    "source": [
-    "borussia_bundesliga_2008_2009_matches = # Your code here"
+    "borussia_bundesliga_2008_2009_matches = 0# Your code here"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 165,
    "id": "488fdd4c",
    "metadata": {},
    "outputs": [],
@@ -416,17 +605,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 166,
    "id": "9969ba5c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "team_most_matches_bundesliga_2008_2009 = # Your code here"
+    "team_most_matches_bundesliga_2008_2009 = 0# Your code here"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 167,
    "id": "ef3b8fa2",
    "metadata": {},
    "outputs": [],
@@ -445,17 +634,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 168,
    "id": "52456f34",
    "metadata": {},
    "outputs": [],
    "source": [
-    "arsenal_won_matches_2015_2016 = # Your code here"
+    "arsenal_won_matches_2015_2016 = 0# Your code here"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 169,
    "id": "214d9689",
    "metadata": {},
    "outputs": [],
@@ -473,20 +662,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 170,
    "id": "b1aa7db0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "team_highest_winrate_2015_2016 = # Your code here"
+    "team_highest_winrate_2015_2016 = 0# Your code here"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 171,
    "id": "b4cc8e46",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_41860/309408251.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32massert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mteam_highest_winrate_2015_2016\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "assert(isinstance(team_highest_winrate_2015_2016, str))"
    ]
@@ -502,17 +703,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 172,
    "id": "a4c33e5f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "highest_gap_england_2010_2011 = # Your code here"
+    "highest_gap_england_2010_2011 = 0# Your code here"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 173,
    "id": "5f7aa84e",
    "metadata": {},
    "outputs": [],
@@ -530,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 174,
    "id": "94c3b9be",
    "metadata": {},
    "outputs": [],
@@ -552,6 +753,14 @@
     "    file.write(f\"{team_highest_winrate_2015_2016}\\n\")\n",
     "    file.write(f\"{highest_gap_england_2010_2011}\\n\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fdcf98c8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -570,7 +779,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
