--- a/1_data_manipulations/Pandas_data_manipulations_tasks.ipynb
+++ b/1_data_manipulations/Pandas_data_manipulations_tasks.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "f52b1bac",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "8ebe6afd",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "9860d0d0",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "7e69a7af",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
        "4  1979-11-08 00:00:00  182.88     154  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "7cd6f780",
    "metadata": {},
    "outputs": [],
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "9d058065",
    "metadata": {},
    "outputs": [],
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "ff21f7a2",
    "metadata": {},
    "outputs": [],
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "e53cc066",
    "metadata": {},
    "outputs": [],
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "b0dbdaf5",
    "metadata": {},
    "outputs": [],
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "40dabe0d",
    "metadata": {},
    "outputs": [],
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "9b609f1c",
    "metadata": {},
    "outputs": [],
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "64cbf754",
    "metadata": {},
    "outputs": [],
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "614fac31",
    "metadata": {},
    "outputs": [],
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "id": "f508c49f",
    "metadata": {},
    "outputs": [],
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "c140be4f",
    "metadata": {},
    "outputs": [],
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "fc041623",
    "metadata": {},
    "outputs": [],
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "619110b6",
    "metadata": {},
    "outputs": [],
@@ -386,18 +386,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 81,
    "id": "ff3113ac",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'England Premier League'"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "league_match_data = pd.merge(league_data, match_data, left_on='id', right_on='league_id')\n",
-    "league_most_matches = league_match_data.groupby('name').size().sort_index(ascending=True).idxmax()"
+    "league_most_matches = league_match_data.groupby('name').size().sort_index(ascending=True).idxmax()\n",
+    "league_most_matches"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "id": "390a265b",
    "metadata": {},
    "outputs": [],
@@ -415,42 +427,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 143,
    "id": "ec31bc69",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "31293.0     149\n",
+       "41097.0     145\n",
+       "26295.0     142\n",
+       "42422.0     141\n",
+       "31465.0     141\n",
+       "           ... \n",
+       "176682.0      1\n",
+       "41458.0       1\n",
+       "655544.0      1\n",
+       "150464.0      1\n",
+       "41948.0       1\n",
+       "Name: home_player_1, Length: 906, dtype: int64"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# lookup_fields = [f'home_player_{_}' for _ in range(1, 12)] + [f'away_player_{_}' for _ in range(1, 12)]\n",
-    "# match_parts = pd.Series()\n",
-    "# for field in lookup_fields:\n",
-    "#     match_parts = pd.concat([match_parts, match_data[field].value_counts()]).rename('parts')\n",
-    "#     match_parts.index = match_parts.index.astype(int).rename('player_id')\n",
-    "#     match_parts = match_parts.groupby(level='player_id').sum()\n",
-    "# max_matches_player = pd.merge(player_data, match_parts, left_on='player_api_id', right_on='player_id') \\\n",
-    "#     .sort_values(by='parts', ascending=False).player_name.values[0]\n",
-    "# # max_matches_player\n",
-    "# lookup_fields\n",
-    "max_matches_player = ''"
+    "max_matches_player = 'str'\n",
+    "\n",
+    "home = match_data.home_player_1.value_counts()\n",
+    "# player_data.sort_values(by='player_fifa_api_id') #750584"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "id": "00ec2e89",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'max_matches_player' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_3601/3107073508.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32massert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmax_matches_player\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'max_matches_player' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "assert(isinstance(max_matches_player, str))"
    ]
@@ -470,33 +485,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "id": "47c1412e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "top_correlated_features = [('',''),('',''),('',''),('',''),('','')]# Your code here\n",
-    "attributes_data[attributes_data.preferred_foot == 'left']"
+    "goal_attr = attributes_data.drop(['id', 'player_fifa_api_id', 'player_api_id', 'date', 'preferred_foot', 'attacking_work_rate', 'defensive_work_rate'], axis=1)\n",
+    "corr_attr = goal_attr.corr(method='pearson').abs().unstack().sort_values(ascending=False)[goal_attr.shape[1]:].iloc[::2]\n",
+    "top_correlated_features = corr_attr.index[:5].to_list()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 78,
    "id": "67acd6bf",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'top_correlated_features' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_3601/1157110022.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32massert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtop_correlated_features\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32massert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtop_correlated_features\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32massert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtop_correlated_features\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtuple\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32massert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtop_correlated_features\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'top_correlated_features' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "assert(len(top_correlated_features) == 5)\n",
     "assert(isinstance(top_correlated_features, list))\n",
@@ -519,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "id": "fac5a571",
    "metadata": {},
    "outputs": [],
@@ -529,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "id": "ddb1876a",
    "metadata": {},
    "outputs": [],
@@ -550,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 26,
    "id": "bdf5a267",
    "metadata": {},
    "outputs": [],
@@ -563,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "id": "488fdd4c",
    "metadata": {},
    "outputs": [],
@@ -581,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 28,
    "id": "9969ba5c",
    "metadata": {},
    "outputs": [],
@@ -593,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "id": "ef3b8fa2",
    "metadata": {},
    "outputs": [],
@@ -612,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 30,
    "id": "52456f34",
    "metadata": {},
    "outputs": [],
@@ -628,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 31,
    "id": "214d9689",
    "metadata": {},
    "outputs": [],
@@ -646,17 +650,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 126,
    "id": "b1aa7db0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25944    726956.0\n",
+       "15606    717557.0\n",
+       "4643     696365.0\n",
+       "4701     696365.0\n",
+       "4681     696365.0\n",
+       "           ...   \n",
+       "24961         NaN\n",
+       "25147         NaN\n",
+       "25478         NaN\n",
+       "25595         NaN\n",
+       "25600         NaN\n",
+       "Name: home_player_11, Length: 25979, dtype: float64"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "team_highest_winrate_2015_2016 = '0'# Your code here"
+    "team_highest_winrate_2015_2016 = '0'\n",
+    "season = '2015/2016'\n",
+    "matches = match_data[match_data.season == '2015/2016']\n",
+    "winrates = [(team_data.team_api_id)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 125,
    "id": "b4cc8e46",
    "metadata": {},
    "outputs": [],
