--- a/1_data_manipulations/Pandas_data_manipulations_tasks.ipynb
+++ b/1_data_manipulations/Pandas_data_manipulations_tasks.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "f52b1bac",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "8ebe6afd",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "9860d0d0",
    "metadata": {},
    "outputs": [],
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "619110b6",
    "metadata": {},
    "outputs": [],
@@ -427,42 +427,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 59,
    "id": "ec31bc69",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "31293.0     149\n",
-       "41097.0     145\n",
-       "26295.0     142\n",
-       "42422.0     141\n",
-       "31465.0     141\n",
-       "           ... \n",
-       "176682.0      1\n",
-       "41458.0       1\n",
-       "655544.0      1\n",
-       "150464.0      1\n",
-       "41948.0       1\n",
-       "Name: home_player_1, Length: 906, dtype: int64"
+       "'Steve Mandanda'"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "max_matches_player = 'str'\n",
-    "\n",
-    "home = match_data.home_player_1.value_counts()\n",
+    "home_away_match = [f'home_player_{s}' for s in range(1, 12)] + [f'away_player_{s}' for s in range(1, 12)]\n",
+    "all_matches = pd.Series(dtype='float64')\n",
+    "for x in home_away_match:\n",
+    "    all_matches = pd.concat([all_matches, match_data[x].value_counts()]).rename('player_api_matches')\n",
+    "    all_matches.index = all_matches.index.astype(int).rename('player_id')\n",
+    "    all_matches = all_matches.groupby(level='player_id').sum()\n",
+    "max_matches_player = pd.merge(player_data, all_matches, left_on='player_api_id', right_on='player_id') \\\n",
+    "    .sort_values(by='player_api_matches', ascending=False).player_name.values[0]\n",
+    "all_matches.sort_values()\n",
+    "max_matches_player\n",
     "# player_data.sort_values(by='player_fifa_api_id') #750584"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 60,
    "id": "00ec2e89",
    "metadata": {},
    "outputs": [],
