--- a/1_data_manipulations/Pandas_data_manipulations_tasks.ipynb
+++ b/1_data_manipulations/Pandas_data_manipulations_tasks.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 55,
    "id": "f52b1bac",
    "metadata": {},
    "outputs": [],
@@ -34,13 +34,14 @@
     "import sqlite3\n",
     "import pandas as pd\n",
     "import os\n",
+    "import numpy as np\n",
     "\n",
     "pd.set_option('display.max_column', None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 56,
    "id": "8ebe6afd",
    "metadata": {},
    "outputs": [],
@@ -51,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 57,
    "id": "9860d0d0",
    "metadata": {},
    "outputs": [],
@@ -373,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 140,
    "id": "619110b6",
    "metadata": {},
    "outputs": [],
@@ -386,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 141,
    "id": "ff3113ac",
    "metadata": {},
    "outputs": [
@@ -396,7 +397,7 @@
        "'England Premier League'"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,6 +405,9 @@
    "source": [
     "league_match_data = pd.merge(league_data, match_data, left_on='id', right_on='league_id')\n",
     "league_most_matches = league_match_data.groupby('name').size().sort_index(ascending=True).idxmax()\n",
+    "# Series_league = match_data.league_id.value_counts()\n",
+    "# Series_league_max = Series_league[Series_league == Series_league.max()]\n",
+    "# league_most_matches = league_data.name[league_data.id == Series_league_max.index[0]].values[0]\n",
     "league_most_matches"
    ]
   },
@@ -481,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 153,
    "id": "47c1412e",
    "metadata": {},
    "outputs": [],
@@ -519,12 +523,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 155,
    "id": "fac5a571",
    "metadata": {},
    "outputs": [],
    "source": [
-    "neymar_similarities = [' ',' ',' ',' ',' ']# Your code here"
+    "ney_id = player_data[player_data.player_name == 'Neymar'].player_api_id.values[0]\n",
+    "last_attr = attributes_data.sort_values(by=(['player_api_id','date'])).drop_duplicates(subset=['player_api_id'], keep='last')\n",
+    "drop_col = ['id', 'player_fifa_api_id' , 'date', 'preferred_foot', 'attacking_work_rate', 'defensive_work_rate']\n",
+    "ney_attr = last_attr[last_attr.player_api_id == ney_id].drop(drop_col + ['player_api_id'], axis=1)\n",
+    "last_attr = last_attr.drop(drop_col, axis=1)\n",
+    "ney_attr_vec, last_attr_vec = ney_attr.values.tolist()[0], last_attr.values.tolist()\n",
+    "euclid_dist = dict()\n",
+    "for v in last_attr_vec:\n",
+    "    ind = v[0]\n",
+    "    vec = v[1:]\n",
+    "    dist = np.linalg.norm(np.array(ney_attr_vec) - np.array(vec))\n",
+    "    euclid_dist[ind] = dist\n",
+    "euclid_dist = pd.Series(euclid_dist).rename('euclid_dist')\n",
+    "euclid_dist.index = euclid_dist.index.rename('player_api_id')\n",
+    "euclid_dist = euclid_dist.sort_values().iloc[1:6].to_frame()\n",
+    "ans = euclid_dist.merge(player_data, on='player_api_id')\n",
+    "neymar_similarities = ans.player_name.to_list()\n"
    ]
   },
   {
@@ -646,42 +666,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 169,
    "id": "b1aa7db0",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "25944    726956.0\n",
-       "15606    717557.0\n",
-       "4643     696365.0\n",
-       "4701     696365.0\n",
-       "4681     696365.0\n",
-       "           ...   \n",
-       "24961         NaN\n",
-       "25147         NaN\n",
-       "25478         NaN\n",
-       "25595         NaN\n",
-       "25600         NaN\n",
-       "Name: home_player_11, Length: 25979, dtype: float64"
-      ]
-     },
-     "execution_count": 126,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "team_highest_winrate_2015_2016 = '0'\n",
-    "season = '2015/2016'\n",
     "matches = match_data[match_data.season == '2015/2016']\n",
-    "winrates = [(team_data.team_api_id)]"
+    "matches_home = matches[['home_team_api_id', 'away_team_api_id', 'home_team_goal', 'away_team_goal']]\n",
+    "matches_away = matches_home.copy()\n",
+    "matches_home = matches_home.rename(columns={'home_team_api_id':'team_api_id', 'away_team_api_id':'alient_team_api_id', 'home_team_goal':'team_goal','away_team_goal':'alient_team_goal' })\n",
+    "matches_away = matches_away.rename(columns={'away_team_api_id':'team_api_id', 'home_team_api_id':'alient_team_api_id', 'away_team_goal':'team_goal','home_team_goal':'alient_team_goal' })\n",
+    "all_matches = pd.concat([matches_home, matches_away])\n",
+    "all_matches['winner'] = all_matches.apply(lambda x: 1 if x['team_goal'] > x['alient_team_goal'] else 0, axis=1)\n",
+    "winner_df = all_matches.groupby('team_api_id')['winner'].agg(['sum','count'])\n",
+    "winner_df['rate'] = winner_df.apply(lambda x: x['sum']/x['count'], axis=1)\n",
+    "team_highest_winrate_2015_2016 = winner_df.sort_values(by='rate', ascending=False).merge(team_data, on='team_api_id').at[0, 'team_long_name']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 170,
    "id": "b4cc8e46",
    "metadata": {},
    "outputs": [],
@@ -700,12 +705,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 165,
    "id": "a4c33e5f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18"
+      ]
+     },
+     "execution_count": 165,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "highest_gap_england_2010_2011 = 0# Your code here"
+    "season_2010 = '2010/2011'\n",
+    "en_league_id = league_data.loc[(league_data['name'] == 'England Premier League')].reset_index().at[0,'id']\n",
+    "\n",
+    "matches_2015 = match_data[['home_team_api_id', 'away_team_api_id', 'date']][(match_data['season'] == season_2010) & (\n",
+    "    match_data['league_id'] == en_league_id)]\n",
+    "matches_2015['date'] = pd.to_datetime(matches_2015['date'])\n",
+    "\n",
+    "matches_home = matches_2015[['home_team_api_id', 'date']]\n",
+    "matches_away = matches_2015[['away_team_api_id', 'date']]\n",
+    "matches_home.columns = ['team_api_id', 'date']\n",
+    "matches_away.columns = ['team_api_id', 'date']\n",
+    "matches_whole = pd.concat([matches_home, matches_away])\n",
+    "\n",
+    "teams = matches_away['team_api_id'].unique()\n",
+    "gaps=[]\n",
+    "\n",
+    "for team_id in teams:\n",
+    "    team_matches = matches_whole[matches_whole['team_api_id'] == team_id].sort_values(\n",
+    "        by='date', ascending=False)\n",
+    "    gaps.append(team_matches.diff(periods=-1).max()[1])\n",
+    "\n",
+    "highest_gap_england_2010_2011 = max(gaps).days\n",
+    "highest_gap_england_2010_2011"
    ]
   },
   {
